# MedNote_Scribe

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: ehr_store.json
data/chroma_db/: chroma.sqlite3
data/corpus/: SOURCES.md  clinical_guidelines.md  icd10_codes.md
data/transcripts_examples/: ts1.txt  ts2.txt
data/transcripts_synthetic/: transcripts.csv  transcripts.jsonl
docs/: progress.md  requirements.md  tasks.md  testing_examples.md  tools.md
docs/ingestion_pipeline_and_rag/: icd10_rag_ingestion_plan.md
src/: agent.py  app.py  chatbot.py  config.py  mcp_server.py  run_queries.py
src/prompts/: system_prompt.md
src/scripts/: generate_transcripts.py  ingest.py  retrieve.py  run_queries.py  test_mcp_roundtrip.py
src/tests/: test_chatbot.py  test_ehr_tools.py  test_icd10_ingest.py
src/tools/: __init__.py  ehr_tools.py
tests/: __init__.py  conftest.py
tests/integration/: test_group_b_rag_retrieval.py  test_group_d_mcp_roundtrip.py
tests/patterns/: __init__.py  test_group_a_soap_gen.py  test_group_e_memory.py  test_group_f_guardrails.py  test_group_g_edge_cases.py  test_group_h_confidence.py
tests/unit/: test_group_c_ehr_tools.py  test_icd10_ingest.py
